# position-sizing

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/position_sizing/: __init__.py
tests/: test_position_sizing.py
